# multiphoton_guide

./: .flake8  .gitignore  Dockerfile  IMPORT_FIXES_COMPLETE.md  LICENSE.txt  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  README.md  REFACTORING_COMPLETE.md  REORGANIZATION_COMPLETE.md  __init__.py  app.py  code_duplication_analysis.md  logs-guitarbeat-multiphoton_guide-main-app.py-2025-05-26T17_19_30.610Z.txt  logs-guitarbeat-multiphoton_guide-main-app.py-2025-07-09T22_52_30.353Z.txt  packages.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  test_fit.py  test_integration.py  test_supabase.py  updated_requirements.txt
.cursor/: mcp.json
.github/workflows/: ci.yml
.streamlit/: config.toml
SOP_latex/: Fiber_Amp_Diamond_Raman_Laser_SOP.md  main.tex
assets/: styles.css
data/: fluorescence_measurements.csv  laser_power_measurements.csv  pulse_width_measurements.csv  rig_log.csv
docs/: public_google_sheets.md
modules/: __init__.py  data_utils.py  fluorescence.py  laser_power.py  pulse_width.py  reference.py  rig_log.py  shared_utils.py  test_logo.py  testing_utils.py  theme.py  ui_components.py  usaf_analyzer.py
modules/analysis/: __init__.py  reference.py  usaf_analyzer.py
modules/core/: __init__.py  constants.py  data_utils.py  database_utils.py  shared_utils.py  validation_utils.py
modules/measurements/: __init__.py  fluorescence.py  laser_power.py  pulse_and_fluorescence.py  pulse_width.py  rig_log.py  source_power.py
modules/pages/: __init__.py  fluorescence_page.py  laser_power_page.py  pulse_width_page.py  reference_page.py  rig_log_page.py  usaf_analyzer_page.py
modules/ui/: __init__.py  components.py  templates.py  theme.py
scripts/: generate_requirements.py
tests/: __init__.py  run_tests.py  test_app.py  test_data_utils.py  test_integration 2.py  test_integration.py  test_pdf_viewer.py  test_ui_templates.py  testing_utils.py
